# eye-to-eye-calibration

./: README.md
Eye-eye-calibration_simulation/STEP1_generate_data/: compare_translation_difference.m  generate_data_3cameras_model.m  generate_data_p3p.m  generate_data_p4p.m  p3p.m  solveQuartic.m  test_whether_equal.m
Eye-eye-calibration_simulation/STEP2_sort_projection_size/: compare_quaternion_difference.m  compare_sum_of_3dim_difference.m  sort_projection_size.m
Eye-eye-calibration_simulation/STEP3_run_diff_methods/: calculateXandY_use_Li_Dornaika_Shah_different_datatype.m  calculateXandY_use_Li_Dornaika_Shah_different_noise_level.m  calculateXandY_use_Li_Dornaika_Shah_different_number.m  compare_to_ground_truth.m  dornaika.txt  dornaika1998.m  li1995.m  pick_out_clustered_dist_set.m  pick_out_random_dist_set.m  pick_out_scattered_dist_set.m  results_comparison_with_different_datatype.m  results_comparison_with_noise.m  results_comparison_with_number.m  shah2013.m  solveQuartic.m  zhuang1994.m
pixel_opt/: CMakeLists.txt  CMakeLists.txt~  package.xml
pixel_opt/data/noised_pose_pair_bank/: Ai_Bi_Bigsize_Level1.txt  Ai_Bi_Bigsize_Level2.txt  Ai_Bi_Bigsize_Level3.txt  Ai_Bi_Bigsize_Level4.txt  Ai_Bi_Bigsize_Level7.txt  Ai_Bi_Smallsize_Level1.txt  Ai_Bi_Smallsize_Level4.txt  Ai_Bi_Smallsize_Level5.txt
pixel_opt/launch/: pixel_opt.launch~
pixel_opt/src/: T_EM_RC.txt~  cv2_eigen.hpp  eye_eye_calib_groundtruth.cpp  eye_eye_calib_realexp.cpp  eye_eye_calib_realexp_knownX.cpp  factor_analyse_eye_eye.cpp  initXYvalues.txt~  types_edge_extension.cpp  types_edge_extension.hpp  types_sba_extension.cpp~
(+14 files in other folders)
